test/tests/stages/18_structures/valid/no_structure_parameters/semantic_analysis/cast_struct_to_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  ,
  const int(2)
  }
  ;
  (
  void
  )
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
