test/tests/stages/18_structures/invalid_struct_tags/array_of_undeclared.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(arr)
  [
  const int(2)
  ]
  ;
  return
  const int(0)
  ;
  }
